# RitoHub

./: .gitignore  leagueofgraphs-recent.html  leagueofgraphs-sample.html  package-lock.json  package.json  riot.txt
frontend/: .gitignore  eslint.config.js  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/blocks/: account-card.tsx  add-account-dialog.tsx
frontend/components/ui/: form.tsx
frontend/hooks/: use-store.ts
frontend/providers/: accounts-provider.tsx
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/blocks/: account-card.tsx  add-account-dialog.tsx  app-page-header.tsx  game-rail.tsx
frontend/src/components/blocks/match-history/: champion-icon.tsx  index.ts  item-build.tsx  match-history-skeleton.tsx  match-history-summary.tsx  match-row-detail.tsx  (+4 more)
frontend/src/components/ui/: button.tsx  progress.tsx
frontend/src/hooks/: use-account-live-game.ts  use-account-match-history.ts  use-requests.ts  use-store.ts  use-summoner-profile.ts
frontend/src/lib/: account-store.ts  league-rank.ts  lol-static-data.ts  match-utils.ts  riot-api.ts  riot-client.ts  riot.ts  types.ts
frontend/src/providers/: accounts-context.ts  accounts-provider.tsx  game-selection-context.ts  game-selection-provider.tsx  theme-provider.tsx  types.ts
frontend/src/routes/: __root.tsx  index.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: app_state.rs  commands.rs  leagueofgraphs.rs  lib.rs  main.rs  riot_api.rs  riot_client.rs  secure_storage.rs
(+2 files in other folders)
